updated complete academic year api
